[gd_scene load_steps=97 format=3 uid="uid://di814vjuqip0e"]

[ext_resource type="Script" path="res://entities/sample_spells/suburban/sunburn_projectile.gd" id="1_a5fy5"]
[ext_resource type="Texture2D" uid="uid://dala2tmcmngn5" path="res://assets/sprites/spells/sunburn_strip61.png" id="2_pig2i"]
[ext_resource type="Texture2D" uid="uid://ciuemlu5uaokq" path="res://assets/sprites/spells/weaponhit_strip30.png" id="3_nwjtt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mnp6c"]
atlas = ExtResource("2_pig2i")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6jog"]
atlas = ExtResource("2_pig2i")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_brb4q"]
atlas = ExtResource("2_pig2i")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryscl"]
atlas = ExtResource("2_pig2i")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcn1u"]
atlas = ExtResource("2_pig2i")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv7m3"]
atlas = ExtResource("2_pig2i")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uquf"]
atlas = ExtResource("2_pig2i")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtnwr"]
atlas = ExtResource("2_pig2i")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_saaye"]
atlas = ExtResource("2_pig2i")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_542y4"]
atlas = ExtResource("2_pig2i")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6020p"]
atlas = ExtResource("2_pig2i")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0ttx"]
atlas = ExtResource("2_pig2i")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbedb"]
atlas = ExtResource("2_pig2i")
region = Rect2(1200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_unaq0"]
atlas = ExtResource("2_pig2i")
region = Rect2(1300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avs0"]
atlas = ExtResource("2_pig2i")
region = Rect2(1400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfn70"]
atlas = ExtResource("2_pig2i")
region = Rect2(1500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_les8t"]
atlas = ExtResource("2_pig2i")
region = Rect2(1600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws044"]
atlas = ExtResource("2_pig2i")
region = Rect2(1700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_exx61"]
atlas = ExtResource("2_pig2i")
region = Rect2(1800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n31be"]
atlas = ExtResource("2_pig2i")
region = Rect2(1900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqeuc"]
atlas = ExtResource("2_pig2i")
region = Rect2(2000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_svqup"]
atlas = ExtResource("2_pig2i")
region = Rect2(2100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykqrn"]
atlas = ExtResource("2_pig2i")
region = Rect2(2200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft5eh"]
atlas = ExtResource("2_pig2i")
region = Rect2(2300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_070w1"]
atlas = ExtResource("2_pig2i")
region = Rect2(2400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbame"]
atlas = ExtResource("2_pig2i")
region = Rect2(2500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wccm2"]
atlas = ExtResource("2_pig2i")
region = Rect2(2600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax1qf"]
atlas = ExtResource("2_pig2i")
region = Rect2(2700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8aoc"]
atlas = ExtResource("2_pig2i")
region = Rect2(2800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lctg0"]
atlas = ExtResource("2_pig2i")
region = Rect2(2900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oobyl"]
atlas = ExtResource("2_pig2i")
region = Rect2(3000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpn80"]
atlas = ExtResource("2_pig2i")
region = Rect2(3100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tew6"]
atlas = ExtResource("2_pig2i")
region = Rect2(3200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ohwt"]
atlas = ExtResource("2_pig2i")
region = Rect2(3300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxve"]
atlas = ExtResource("2_pig2i")
region = Rect2(3400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1nnn"]
atlas = ExtResource("2_pig2i")
region = Rect2(3500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3pyp"]
atlas = ExtResource("2_pig2i")
region = Rect2(3600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_855a1"]
atlas = ExtResource("2_pig2i")
region = Rect2(3700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jrg6"]
atlas = ExtResource("2_pig2i")
region = Rect2(3800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxqbg"]
atlas = ExtResource("2_pig2i")
region = Rect2(3900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_34i44"]
atlas = ExtResource("2_pig2i")
region = Rect2(4000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyflc"]
atlas = ExtResource("2_pig2i")
region = Rect2(4100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl5wx"]
atlas = ExtResource("2_pig2i")
region = Rect2(4200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_scyso"]
atlas = ExtResource("2_pig2i")
region = Rect2(4300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh5sy"]
atlas = ExtResource("2_pig2i")
region = Rect2(4400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x42h1"]
atlas = ExtResource("2_pig2i")
region = Rect2(4500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhjtl"]
atlas = ExtResource("2_pig2i")
region = Rect2(4600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5drjb"]
atlas = ExtResource("2_pig2i")
region = Rect2(4700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkv53"]
atlas = ExtResource("2_pig2i")
region = Rect2(4800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0x2v"]
atlas = ExtResource("2_pig2i")
region = Rect2(4900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_el1g3"]
atlas = ExtResource("2_pig2i")
region = Rect2(5000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqilg"]
atlas = ExtResource("2_pig2i")
region = Rect2(5100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c48w"]
atlas = ExtResource("2_pig2i")
region = Rect2(5200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m84xv"]
atlas = ExtResource("2_pig2i")
region = Rect2(5300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_po3b2"]
atlas = ExtResource("2_pig2i")
region = Rect2(5400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksg75"]
atlas = ExtResource("2_pig2i")
region = Rect2(5500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwm0j"]
atlas = ExtResource("2_pig2i")
region = Rect2(5600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wef07"]
atlas = ExtResource("2_pig2i")
region = Rect2(5700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxwwp"]
atlas = ExtResource("2_pig2i")
region = Rect2(5800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2qa0"]
atlas = ExtResource("2_pig2i")
region = Rect2(5900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p81n0"]
atlas = ExtResource("2_pig2i")
region = Rect2(6000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngt4p"]
atlas = ExtResource("3_nwjtt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_neoon"]
atlas = ExtResource("3_nwjtt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pybdp"]
atlas = ExtResource("3_nwjtt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4qm7"]
atlas = ExtResource("3_nwjtt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxov0"]
atlas = ExtResource("3_nwjtt")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmpkb"]
atlas = ExtResource("3_nwjtt")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y0v8"]
atlas = ExtResource("3_nwjtt")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aed8w"]
atlas = ExtResource("3_nwjtt")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ce60"]
atlas = ExtResource("3_nwjtt")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft5ov"]
atlas = ExtResource("3_nwjtt")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dia7"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6xm8"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixfbi"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfxin"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akv46"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_juav8"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3uf7"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7rfd"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnewh"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg3r7"]
atlas = ExtResource("3_nwjtt")
region = Rect2(1900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dwly"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4o8"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlraw"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cytg"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqd86"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqkcu"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_idoth"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxwtf"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oebjv"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a4qe"]
atlas = ExtResource("3_nwjtt")
region = Rect2(2900, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_rohms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnp6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6jog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brb4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryscl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcn1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv7m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uquf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtnwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saaye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_542y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6020p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0ttx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbedb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unaq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfn70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_les8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws044")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exx61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n31be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqeuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svqup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykqrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft5eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_070w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbame")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wccm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax1qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8aoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lctg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oobyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpn80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tew6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ohwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1nnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3pyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_855a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jrg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxqbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34i44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyflc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl5wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scyso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh5sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x42h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhjtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5drjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkv53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0x2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el1g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqilg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c48w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m84xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po3b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksg75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwm0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wef07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxwwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2qa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p81n0")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngt4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neoon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pybdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4qm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxov0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmpkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y0v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aed8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ce60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft5ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dia7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6xm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixfbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfxin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akv46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juav8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3uf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7rfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnewh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg3r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dwly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlraw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cytg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqd86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqkcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idoth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxwtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oebjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a4qe")
}],
"loop": false,
"name": &"explode",
"speed": 60.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sap4a"]
radius = 14.0

[node name="SunburnProjectile" type="Node2D"]
script = ExtResource("1_a5fy5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rohms")
animation = &"explode"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 1)
shape = SubResource("CircleShape2D_sap4a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
